--- a/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
+++ b/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
@@ -1,14 +1,92 @@
+<h2>Emploi du temps de la classe : {{groupClass.name}}</h2>
+<h3>De l'établissement : {{groupClass.institution.name}}</h3>
+
 
 <div class='demo-app'>
 
 
   <div class='demo-app-main'>
-    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions'>
-<!--      <ng-template #eventContent let-arg>-->
-<!--        <b>{{ arg.timeText }}</b>-->
-<!--        <i>{{ arg.event.title }}</i>-->
-<!--      </ng-template>-->
+    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' (click)="open(content)"  id="calendar">
+      <!--      <ng-template #eventContent let-arg>-->
+      <!--        <b>{{ arg.timeText }}</b>-->
+      <!--        <b>{{ arg.timeText }}</b>-->
+      <!--        <i>{{ arg.event.title }}</i>-->
+      <!--      </ng-template>-->
+
+
     </full-calendar>
+    <div>
+      <button (click)="generatePdf()">Generate PDF</button>
+    </div>
   </div>
 
+
 </div>
+
+
+<!--Modal-->
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Selection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <form  [formGroup]="ourForm" (ngSubmit)="handleSelect($event)" >
+    <div class="modal-body">
+      <!--formulaire -->
+
+
+
+      <ul>
+
+        <li> Jour: <input type="hidden" formControlName="date" [(ngModel)]="startDay"   /> {{ startDay }}  </li>
+
+
+        <li> Debut:<input type="hidden" formControlName="beginTime" [(ngModel)]="startTime" /> {{ startTime}} </li>
+
+        <li> Fin: <input type="hidden" formControlName="endTime" [(ngModel)]="endTime"   />{{ endTime}}</li>
+
+
+      </ul>
+      <div formGroupName="teacher">
+        <label for="teacherId" class="form-label">Professeur :</label>
+        <select  id="teacherId" class="form-control" formControlName="id">
+          <option  *ngFor="let teacher of teachers" [value]=teacher.id >{{teacher.lastName}} {{teacher.firstName}}</option>
+        </select>
+      </div>
+      <div formGroupName="subject">
+        <label for="subjectId" class="form-label">Matière(s) :</label>
+        <select  id="subjectId" class="form-control" formControlName="id">
+          <option  *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
+        </select>
+      </div>
+
+
+
+
+    </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>
+      <button type="submit" class="btn btn-primary" >Sauvegarder</button>
+
+    </div>
+  </form>
+  <ul *ngIf="formsubmitted">
+    <li *ngIf="ourForm.controls['startDay'].errors?.['required']">Le jour est obligatoire</li>
+    <li *ngIf="ourForm.controls['startTime'].errors?.['required']">L'heure de début est obligatoire</li>
+    <li *ngIf="ourForm.controls['endTime'].errors?.['required']">L'heude de fin est obligatoire</li>
+    <li *ngIf="ourForm.controls['teacher'].errors?.['required']">Le nom du professeur est obligatoire</li>
+    <li *ngIf="ourForm.controls['subject'].errors?.['required']">La matière est obligatoire</li>
+    <li *ngIf="ourForm.controls['room'].errors?.['required']">La salle de classe est obligatoire</li>
+
+  </ul>
+
+  <div>
+  <pre>
+      {{ourForm.value | json}}
+    </pre>
+    Form status: {{ourForm.valid | json}}
+  </div>
+</ng-template>
