--- a/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
+++ b/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<h2>Emploi du temps de la classe : {{groupClass.name}}</h2>
+<h2>Emploi du temps de la classe : {{groupClass.name}} (Id : {{groupClass.id}} )</h2>
 <h3>De l'établissement : {{groupClass.institution.name}}</h3>
 
 
