--- a/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
+++ b/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
@@ -1,5 +1,5 @@
-<h2>Emploi du temps de la classe : {{groupClass.name}}</h2>
-<h3>De l'établissement : {{groupClass.institution.name}}</h3>
+<h2 *ngIf="groupClass">Emploi du temps de la classe : {{groupClass.name}}</h2>
+<h3 *ngIf="groupClass">De l'établissement : {{groupClass.institution.name}}</h3>
 
 
 <div class='demo-app'>
@@ -38,14 +38,11 @@
     <div class="modal-body">
       <!--formulaire -->
 
+      <ul *ngIf="date">
 
+        <li> Jour: <input type="hidden" formControlName="date" [(ngModel)]="date"   /> {{ date }}  </li>
 
-      <ul>
-
-        <li> Jour: <input type="hidden" formControlName="date" [(ngModel)]="startDay"   /> {{ startDay }}  </li>
-
-
-        <li> Debut:<input type="hidden" formControlName="beginTime" [(ngModel)]="startTime" /> {{ startTime}} </li>
+        <li> Debut:<input type="hidden" formControlName="beginTime" [(ngModel)]="beginTime" /> {{ beginTime}} </li>
 
         <li> Fin: <input type="hidden" formControlName="endTime" [(ngModel)]="endTime"   />{{ endTime}}</li>
 
@@ -64,6 +61,12 @@
           <option  *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
         </select>
       </div>
+      <div formGroupName="classroom">
+        <label for="classroomId" class="form-label">Salle de classe :</label>
+        <select  id="classroomId" class="form-control" formControlName="id">
+          <option  *ngFor="let classroom of classrooms" [value]=classroom.id >{{classroom.name}}</option>
+        </select>
+      </div>
 
 
 
@@ -71,34 +74,32 @@
     </div>
 
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>
-      <button type="submit" class="btn btn-primary" >Sauvegarder</button>
+      <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Annuler</button>
+      <button type="button" class="btn btn-primary" (click)="submitForm()">Sauvegarder</button>
+<!--      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>-->
+<!--      <button type="submit" class="btn btn-primary" >Sauvegarder</button>-->
 
     </div>
   </form>
   <ul *ngIf="formsubmitted">
-    <li *ngIf="ourForm.controls['startDay'].errors?.['required']">Le jour est obligatoire</li>
-    <li *ngIf="ourForm.controls['startTime'].errors?.['required']">L'heure de début est obligatoire</li>
-    <li *ngIf="ourForm.controls['endTime'].errors?.['required']">L'heude de fin est obligatoire</li>
-    <li *ngIf="ourForm.controls['teacher'].errors?.['required']">Le nom du professeur est obligatoire</li>
-    <li *ngIf="ourForm.controls['subject'].errors?.['required']">La matière est obligatoire</li>
-    <li *ngIf="ourForm.controls['room'].errors?.['required']">La salle de classe est obligatoire</li>
+<!--    <li *ngIf="ourForm.controls['startDay'].errors?.['required']">Le jour est obligatoire</li>-->
+<!--    <li *ngIf="ourForm.controls['startTime'].errors?.['required']">L'heure de début est obligatoire</li>-->
+<!--    <li *ngIf="ourForm.controls['endTime'].errors?.['required']">L'heude de fin est obligatoire</li>-->
+<!--    <li *ngIf="ourForm.controls['teacher'].errors?.['required']">Le nom du professeur est obligatoire</li>-->
+<!--    <li *ngIf="ourForm.controls['subject'].errors?.['required']">La matière est obligatoire</li>-->
+<!--    <li *ngIf="ourForm.controls['classroom'].errors?.['required']">La salle de classe est obligatoire</li>-->
 
   </ul>
-  
-  <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Sauvegarder</button>
 
-  </div>
 
-</ng-template>
+
+<!--</ng-template>-->
 
   <div>
   <pre>
       {{ourForm.value | json}}
     </pre>
-    Form status: {{ourForm.valid | json}}
+<!--    Form status: {{ourForm.valid | json}}-->
   </div>
 </ng-template>
 
