--- a/GestionScolaireAngular/src/app/components/subject-components/subject-detail/subject-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/subject-components/subject-detail/subject-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="card">
-      <div class="card-body">
+      <div *ngIf="subject" class="card-body">
         <h5 class="card-title">Nom de matière : {{subject.name}}</h5>
         <p class="card-text">Couleur associée : {{subject.color}}</p>
         <br><br><br>
