--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="card">
-      <div class="card-body">
+      <div class="card-body" *ngIf="teacher">
         <img src="https://64.media.tumblr.com/d76e7c44f367cf1a06d6b45b47c9111a/tumblr_pmrmln17xI1solxeko1_1280.jpg" class="card-img" alt="JD">
         <h5 class="card-title">Teacher: {{teacher.lastName}}  {{teacher.firstName}}</h5>
         <h5 class="severity" >Matière(s) enseignée(s) :</h5>
