--- a/GestionScolaireAngular/src/app/components/home/home.component.html
+++ b/GestionScolaireAngular/src/app/components/home/home.component.html
@@ -8,11 +8,19 @@
 </head>
 <body>
 
-<h2>Bienvenue sur NEFR</h2>
-<!-- About Section -->
-<div class="w3-container w3-padding-32" id="about">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">A propos :</h3>
-  <p>Ce site, fondé en 2023 par Sébastien, Johann et Kevin, vous permettra de gérer
-    votre établissement scolaire en rendant accessible l'ajout de matière, professeurs etc ...
-  J'espère qu'il vous plaira.
+
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <div class="w3-container w3-padding-32" id="about">
+        <h2>Bienvenue sur NEFR</h2>
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">A propos :</h3>
+        <p>Ce site, fondé en 2023 par Sébastien, Johann et Kevin, vous permettra de gérer votre établissement scolaire en rendant accessible l'ajout de matière, professeurs etc ...
+          J'espère qu'il vous plaira.
+        </p>
+        <img src="https://images.unsplash.com/photo-1592066575517-58df903152f2?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=2198&amp;q=80" alt="..." class="mt-3">
+      </div>
+    </div>
+  </div>
 </div>
