--- a/GestionScolaireAngular/src/app/components/institution-components/institution-detail/institution-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/institution-components/institution-detail/institution-detail.component.html
@@ -1,32 +1,44 @@
-<div class="w3-container w3-padding-32" id="institution">
-  <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-    Détail de l'établissement (ID = {{institution.id}}) :
-  </h2>
-</div>
-<div>
-  <h3>Catégorie : {{institution.type}}</h3>
-  <h3>Nom : {{institution.name}}</h3>
-  <h3>Téléphone : {{institution.phone}}</h3>
-  <h3>Nombre de professeurs : {{teachers.length}}</h3>
-  <h3>Nombre de matières enseignées : {{subjects.length}}</h3>
-  <h3>Nombre de classes : {{groupClasses.length}}</h3>
-  <h3>Nombre de salles de classe : {{classrooms.length}}</h3>
-  <br>
-  <button  class="btn btn-primary" [routerLink]="['/institution/' , institution.id,'teacher']">
-    Gestion des professeurs
-  </button>
-  <br>
-  <button  class="btn btn-primary" [routerLink]="['/institution/' , institution.id,'subject']">
-    Gestion des matières
-  </button>
-  <br>
-  <button  class="btn btn-primary" [routerLink]="['/institution/' , institution.id,'group-class']">
-    Gestion des classes
-  </button>
-  <br>
-  <button  class="btn btn-primary" [routerLink]="['/institution/' , institution.id,'classroom']">
-    Gestion des salles de classe
-  </button>
-  <br><br><br>
-  <button style="background-color: red"  class="btn btn-primary" (click)=deleteInstitution()>Delete</button>
+
+
+<div class="card rounded-3">
+  <div class="card-body">
+    <h2 class="card-title text-center">Détail de l'établissement (ID = {{institution.id}})</h2>
+    <div class="row mt-3">
+      <div class="col-sm-6">
+        <h3 class="fw-bold">Catégorie : {{institution.type}}</h3>
+        <h3 class="fw-bold">Nom : {{institution.name}}</h3>
+        <h3 class="fw-bold">Téléphone : {{institution.phone}}</h3>
+      </div>
+      <div class="col-sm-6">
+
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-md-3"></div>
+
+      <div class="col-md-3">
+        <h3 class="fw-bold">Nombre de professeurs : {{teachers.length}}</h3>
+        <a href="#" class="btn btn-primary w-100 mb-3"[routerLink]="['/institution/' , institution.id,'teacher']">Gestion des professeurs</a>
+
+        <h3 class="fw-bold">Nombre de classes : {{groupClasses.length}}</h3>
+        <a href="#" class="btn btn-primary w-100"  [routerLink]="['/institution/' , institution.id,'group-class']">Gestion des classes</a>
+      </div>
+      <div class="col-md-3">
+        <h3 class="fw-bold">Nombre de matières enseignées : {{subjects.length}}</h3>
+        <a href="#" class="btn btn-primary w-100 mb-3"[routerLink]="['/institution/' , institution.id,'subject']">Gestion des matières</a>
+
+        <h3 class="fw-bold">Nombre de salles de classe : {{classrooms.length}}</h3>
+        <a href="#" class="btn btn-primary w-100"[routerLink]="['/institution/' , institution.id,'classroom']">Gestion des salles de classe</a>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <button class="btn btn-danger w-100" (click)=deleteInstitution()>Supprimer l'établissement</button>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
 </div>
