--- a/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
+++ b/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
@@ -6,13 +6,12 @@
 
 
   <div class='demo-app-main'>
-    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' (click)="open(content)"  id="calendar">
+    <full-calendar  [options]='calendarOptions'id="calendar">
 
-<!--      <ng-template #eventContent let-arg>-->
-<!--        <b>{{ arg.timeText }}</b>-->
-<!--        <i>{{ arg.event.title }}</i>-->
-<!--      </ng-template>-->
+      <ng-template #eventContent let-arg>
 
+        <i>{{ arg.event.title }}</i>
+      </ng-template>
 
     </full-calendar>
     <div>
@@ -20,11 +19,7 @@
     </div>
   </div>
 
-
 </div>
-
-
-
 <!--Modal-->
 <ng-template #content let-modal>
   <div class="modal-header">
@@ -34,81 +29,55 @@
     </button>
   </div>
 
-  <form  [formGroup]="ourForm" (ngSubmit)="handleSelect($event)" >
+  <form [formGroup]="ourForm" (ngSubmit)="handleSelect($event)">
     <div class="modal-body">
       <!--formulaire -->
 
       <ul *ngIf="date">
-
-        <li> Jour: <input type="hidden" formControlName="date" [(ngModel)]="date"   /> {{ date }}  </li>
-
-        <li> Debut:<input type="hidden" formControlName="beginTime" [(ngModel)]="beginTime" /> {{ beginTime}} </li>
-
-        <li> Fin: <input type="hidden" formControlName="endTime" [(ngModel)]="endTime"   />{{ endTime}}</li>
-
-
+        <li> Jour: <input type="hidden" formControlName="date" [(ngModel)]="date"/> {{startStr }}  </li>
+        <li> Debut:<input type="hidden" formControlName="beginTime" [(ngModel)]="beginTime"/> {{ beginTime}} </li>
+        <li> Fin: <input type="hidden" formControlName="endTime" [(ngModel)]="endTime"/>{{ endTime}}</li>
       </ul>
+
       <div formGroupName="teacher">
         <label for="teacherId" class="form-label">Professeur :</label>
-        <select  id="teacherId" class="form-control" formControlName="id">
-
-          <option  *ngFor="let teacher of teachers" [value]=teacher.id >{{teacher.lastName}} {{teacher.firstName}}</option>
+        <select id="teacherId" class="form-control" formControlName="id">
+          <option *ngFor="let teacher of teachers"
+                  [value]=teacher.id>{{teacher.lastName}} {{teacher.firstName}}</option>
         </select>
       </div>
+
       <div formGroupName="subject">
         <label for="subjectId" class="form-label">Matière(s) :</label>
-        <select  id="subjectId" class="form-control" formControlName="id">
-          <option  *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
+        <select id="subjectId" class="form-control" formControlName="id">
+          <option *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
         </select>
       </div>
+
       <div formGroupName="classroom">
         <label for="classroomId" class="form-label">Salle de classe :</label>
-        <select  id="classroomId" class="form-control" formControlName="id">
-          <option  *ngFor="let classroom of classrooms" [value]=classroom.id >{{classroom.name}}</option>
+        <select id="classroomId" class="form-control" formControlName="id">
+          <option *ngFor="let classroom of classrooms" [value]=classroom.id>{{classroom.name}}</option>
         </select>
       </div>
-
-
-
-
     </div>
+
 
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Annuler</button>
       <button type="button" class="btn btn-primary" (click)="submitForm()">Sauvegarder</button>
-<!--      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>-->
-<!--      <button type="submit" class="btn btn-primary" >Sauvegarder</button>-->
 
     </div>
+
   </form>
   <ul *ngIf="formsubmitted">
-<!--    <li *ngIf="ourForm.controls['startDay'].errors?.['required']">Le jour est obligatoire</li>-->
-<!--    <li *ngIf="ourForm.controls['startTime'].errors?.['required']">L'heure de début est obligatoire</li>-->
-<!--    <li *ngIf="ourForm.controls['endTime'].errors?.['required']">L'heude de fin est obligatoire</li>-->
-<!--    <li *ngIf="ourForm.controls['teacher'].errors?.['required']">Le nom du professeur est obligatoire</li>-->
-<!--    <li *ngIf="ourForm.controls['subject'].errors?.['required']">La matière est obligatoire</li>-->
-<!--    <li *ngIf="ourForm.controls['classroom'].errors?.['required']">La salle de classe est obligatoire</li>-->
-
+    <li *ngIf="ourForm.controls['date'].errors?.['required']">Le jour est obligatoire</li>
+    <li *ngIf="ourForm.controls['beginTime'].errors?.['required']">L'heure de début est obligatoire</li>
+    <li *ngIf="ourForm.controls['endTime'].errors?.['required']">L'heude de fin est obligatoire</li>
+    <li *ngIf="ourForm.controls['teacher'].errors?.['required']">Le nom du professeur est obligatoire</li>
+    <li *ngIf="ourForm.controls['subject'].errors?.['required']">La matière est obligatoire</li>
+    <li *ngIf="ourForm.controls['classroom'].errors?.['required']">La salle de classe est obligatoire</li>
   </ul>
 
-
-
-<!--</ng-template>-->
-
-  <div>
-  <pre>
-      {{ourForm.value | json}}
-    </pre>
-<!--    Form status: {{ourForm.valid | json}}-->
-  </div>
 </ng-template>
 
-
-
-
-
-
-
-
-
-gitt
